fixed issue with wp-block-file on mobile

--- a/src/styles/components/_wp-post.scss
+++ b/src/styles/components/_wp-post.scss
@@ -21,6 +21,21 @@
     }
 
 
+    //Mobile
+    @media screen and (max-width: 480px) {
+      &>.wp-block-file {
+        display: flex;
+        flex-direction: column;
+
+        &>* {
+          padding: 2px 0;
+        }
+      }
+    }
+
+
+
+
 
     ul,
     ol {
